basic function, gis logo

--- a/public/test.html
+++ b/public/test.html
@@ -4,10 +4,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="UTF-8">
 		<title>GIS Taiwan Signup Sheet</title>
-		<link rel="stylesheet" href="./mdl/material.css">
-		<script src="./mdl/material.min.js"></script>
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		<link rel="stylesheet" href="mdl/material.css">
 
+		<script src="bower_components/angular-route/angular-route.js"></script>
+		<script src="mdl/material.min.js"></script>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	</head>
 
 	<body>
