remove inrelevant information again

--- a/public/sheet.html
+++ b/public/sheet.html
@@ -4,7 +4,7 @@
 		<link rel="icon" href="images/LOGO-1.png" type="image/x-icon"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="UTF-8">
-		<title>GIS Signup Sheet</title>
+		<title>Signup Sheet</title>
 
 		<link rel="stylesheet" href="./mdl/material.css">
 		<script src="./mdl/material.min.js"></script>
@@ -78,7 +78,7 @@
 					<div class="mdl-mini-footer--left-section">
 
 						<div class="mdl-logo">
-							GIS Taiwan
+							Org name Here
 						</div>
 						<ul class="mdl-mini-footer--link-list">
 							<li><a href="#">About</a></li>
